# sinsuan

./: .editorconfig  .env  .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md  Rocket.toml
package/: package.json  pnpm-lock.yaml
package/src/: index.ts
src/: app_config.rs  lib.rs  main.rs
src/lib/: storage.rs
src/routes/: count.rs
src/utils/: cors.rs  mod.rs
