[package]
name = "sinsuan"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
snowflake = "1.3.0"
rocket_cors = "0.6.0"
url = "2.2.2"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.200", features = ["derive"] }

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate", "chrono"]
