[package]
name = "sinsuan"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
uuid ={ version = "1.8.0", features = ["v7"] }
url = "2.2.2"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.200", features = ["derive"] }
log = "0.4.14"
reqwest = {version = "0.12.4", default-features = false, features = ["json", "rustls-tls"]}
md-5 = "0.10.6"
hex ="0.4.3"

serde_json = "1.0.117"
urlencoding = "2.1.3"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]
